--- a/Projekt_TAMZ_II/app/src/main/AndroidManifest.xml
+++ b/Projekt_TAMZ_II/app/src/main/AndroidManifest.xml
@@ -5,11 +5,12 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="TAMZ II projekt"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChooseLevelActivity"></activity>
+        <activity android:name=".LoseActivity"></activity>
+        <activity android:name=".ChooseLevelActivity" />
         <activity android:name=".HeroActivity" />
         <activity android:name=".ScoreBoardActivity" />
         <activity android:name=".WinScreenActivity" />
@@ -21,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
